// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render while loading 1`] = `
<div
  className="bblfsh-app__wrap"
>
  <Connect(Header) />
  <div
    className="bblfsh-app__content"
  >
    <Spinner />
  </div>
  <Footer
    languages={Object {}}
  />
</div>
`;

exports[`render with errors 1`] = `
<div
  className="bblfsh-app__wrap"
>
  <Connect(Header) />
  <div
    className="bblfsh-app__content"
  >
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      primary="first"
      split="vertical"
    >
      <Editor
        style={
          Object {
            "height": "100%",
          }
        }
        theme="solarized light"
      />
      <div
        className="bblfsh-app__right-panel"
      >
        <Connect(Options) />
        <Connect(SearchPanel) />
        <Connect(ParseModeSwitcher) />
        <UASTViewer />
      </div>
    </SplitPane>
  </div>
  <Footer
    languages={Object {}}
  />
  <Notifications>
    <Error
      key="0"
      message="error1"
      onRemove={[Function]}
    />
    <Error
      key="1"
      message="error2"
      onRemove={[Function]}
    />
  </Notifications>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="bblfsh-app__wrap"
>
  <Connect(Header) />
  <div
    className="bblfsh-app__content"
  >
    <SplitPane
      allowResize={true}
      defaultSize="50%"
      maxSize={768}
      minSize={256}
      pane1ClassName=""
      pane2ClassName=""
      paneClassName=""
      primary="first"
      split="vertical"
    >
      <Editor
        style={
          Object {
            "height": "100%",
          }
        }
        theme="solarized light"
      />
      <div
        className="bblfsh-app__right-panel"
      >
        <Connect(Options) />
        <Connect(SearchPanel) />
        <Connect(ParseModeSwitcher) />
        <UASTViewer />
      </div>
    </SplitPane>
  </div>
  <Footer
    languages={
      Object {
        "": Object {
          "name": "(auto)",
        },
        "bash": Object {
          "mode": "text/x-sh",
          "name": "Bash",
          "url": "https://github.com/bblfsh/bash-driver",
          "version": "v2.4.0",
        },
        "cpp": Object {
          "mode": "text/x-c++src",
          "name": "C++",
          "url": "https://github.com/bblfsh/cpp-driver",
          "version": "v1.1.0",
        },
      }
    }
  />
</div>
`;
